actualiacion de pagina input

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 
 <body>
+<!-- inputs -->
+<h1>Inputs</h1>
+<a href="./semana1/inputs.html">Link para inputs</a>
+
     <!-- etiqueta de titulo -->
     <h1>Mi pagina web de Codigo</h1>
     <h2>titulo 2</h2>
