form, meta, tables

--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Esta pagina es donde estoy aprendiendo HTML, CSS y JS"
+    />
+    <meta name="robots" content="" />
+    <meta name="googlebot" content="" />
+    <meta name="keywords" content="LINDER HASSINGER, HTML, CSS, JS, CODIGO" />
+    <title>Codigo Front 13</title>
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@linder3hs" />
+    <meta name="twitter:title" content="Mi pagina web" />
+    <meta
+      name="twitter:description"
+      content="Esta pagina es donde estoy aprendiendo HTML, CSS y JS"
+    />
+    <meta
+      name="twitter:image"
+      content="https://media-exp1.licdn.com/dms/image/C4E1BAQEfNIXEf_JoKg/company-background_10000/0?e=2159024400&v=beta&t=PhtZQJ8QA5Wy2lQzlfJL166pSeK_i3q2qfkD-xOMCcc"
+    />
     <title>Codigo Front 13</title>
 </head>
 
@@ -9,6 +30,11 @@
 <h1>Inputs</h1>
 <a href="./semana1/inputs.html">Link para inputs</a>
 
+<h1>formularios</h1>
+<a href="./semana1/form.html">Link de formulario</a>
+
+<h1>Tablas</h1>
+<a href="./semana1/tablas.html">Link de Tablas</a>
     <!-- etiqueta de titulo -->
     <h1>Mi pagina web de Codigo</h1>
     <h2>titulo 2</h2>
