modificacion index - portafolio

--- a/index.html
+++ b/index.html
@@ -18,26 +18,42 @@
 </head>
 
 <body>
-    <div class="contenedor-principal">
+    <div class="img-foto contenedor-principal posicion-color efecto-color">
+         <div class="fullscreen">
+            <div class="personal-caja">
+                <div class="mifoto">
+                    <img src="./imagenes/victor5.jpg" alt="" width="150" height="180">
+                </div>
+                <div class="color-white">
+                    <h2>Hola, Soy Victor</h2>
+                    <h3 id="personal"></h3>
+                </div>
+           
+    
     <h1>MI PORTAFOLIO</h1>
-    <p>
+    <span class="btn-size">
         MI nombre es Victor Borjas tengo 47 años soy ingeniero en Sistemas.
         Trabajo en: Grupo 3C en la área de Sistemas
         Conocimientos en programación; Java, .Net, C#, php basico, manejo de BD. Trato de ampliar mis conocimientos en el desarrollo web.
         hobbies: Manejar Bicicleta, viajar y Bailar.
         tengo en mente muchos proyectos que me gustaría hacer en un ambiente web.
 
-    </p>
-    <img src="" alt="">
-    </div>
- 
-    <ul>
-        <li>semana 1</li>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWxwRaZXfACQVy-14mWdb3nuR0IXTfWaqrzujtaZYYiVLxcHhW55iCAEhjIncoYAfruEY&usqp=CAU" alt="" width="60px" height="60px">
-        <li>semana 2</li>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWxwRaZXfACQVy-14mWdb3nuR0IXTfWaqrzujtaZYYiVLxcHhW55iCAEhjIncoYAfruEY&usqp=CAU" alt=""width="60px" height="60px">
-    </ul>
-
+    </span>
+    <p>
+        <a class="btn-github" href="https://vborjas.github.io/codigo-web-13/">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+            alt=""
+            width="15"
+          />
+          GitHub
+        </a>
+      </p>
+   
+</div>
+</div>
+   
+   
     <div>
         <h3>Temas semana 1</h3>
         <a class="link-referencia" href="./semana1/inputs.html">Link para inputs</a>
