modificacion index - portafolio2

--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
            
     
     <h1>MI PORTAFOLIO</h1>
-    <span class="btn-size">
-        MI nombre es Victor Borjas tengo 47 años soy ingeniero en Sistemas.
+    <div >
+    <span >
+        MI nombre es Victor Borjas soy ingeniero en Sistemas.
         Trabajo en: Grupo 3C en la área de Sistemas
-        Conocimientos en programación; Java, .Net, C#, php basico, manejo de BD. Trato de ampliar mis conocimientos en el desarrollo web.
+        Conocimientos en programación; Java, .Net, C#, php basico, manejo de BD. 
+        Trato de ampliar mis conocimientos en el desarrollo web.
         hobbies: Manejar Bicicleta, viajar y Bailar.
         tengo en mente muchos proyectos que me gustaría hacer en un ambiente web.
 
     </span>
+</div>
     <p>
         <a class="btn-github" href="https://vborjas.github.io/codigo-web-13/">
           <img
