Actualizacion de reto5 y reto6

--- a/index.html
+++ b/index.html
@@ -140,6 +140,72 @@
           </div>
         </div>
         <hr />
+        <!-- inicio de card -->
+        <div class="card">
+          <div>
+            <a class="link-portafolio" href="./reto4/reto4.html">
+              <img class="sombra" src="./reto4/imagenes/frontreto4.jpg" alt="" />
+            </a>
+          </div>
+          <div class="container-detail">
+            <a class="link-portafolio" href="./reto4/reto4.html">
+              <h2 class="titulo-reto">Reto 4 - Testimonials</h2>
+            </a>
+            <p>
+              <span class="label-dark">2022</span>
+              <span class="text-light">&nbsp;&nbsp;&nbsp;Comments</span>
+            </p>
+            <p class="resume">
+              Este reto fue hecho en front-end mentor usando HTML y CSS
+            </p>
+          </div>
+        </div>
+        <hr />
+        <!-- final de card -->
+         <!-- inicio de card -->
+         <div class="card">
+          <div>
+            <a class="link-portafolio" href="./reto5/reto5.html">
+              <img class="sombra" src="./reto4/imagenes/reto5.jpg" alt="" />
+            </a>
+          </div>
+          <div class="container-detail">
+            <a class="link-portafolio" href="./reto5/reto5.html">
+              <h2 class="titulo-reto">Reto 5 - Calculator</h2>
+            </a>
+            <p>
+              <span class="label-dark">2022</span>
+              <span class="text-light">&nbsp;&nbsp;&nbsp;Comments</span>
+            </p>
+            <p class="resume">
+              Este reto fue hecho en front-end mentor usando HTML y CSS
+            </p>
+          </div>
+        </div>
+        <hr />
+        <!-- final de card -->
+         <!-- inicio de card -->
+         <div class="card">
+          <div>
+            <a class="link-portafolio" href="./reto6/reto6.html">
+              <img class="sombra" src="./reto4/imagenes/reto6.jpg" alt="" />
+            </a>
+          </div>
+          <div class="container-detail">
+            <a class="link-portafolio" href="./reto6/reto6.html">
+              <h2 class="titulo-reto">Reto 6 - Sunnyside</h2>
+            </a>
+            <p>
+              <span class="label-dark">2022</span>
+              <span class="text-light">&nbsp;&nbsp;&nbsp;Comments</span>
+            </p>
+            <p class="resume">
+              Este reto fue hecho en front-end mentor usando HTML y CSS
+            </p>
+          </div>
+        </div>
+        <hr />
+        <!-- final de card -->
       </div>
     </section>
   </body>
